# constitutional-map-ai

./: .env.example  .gitignore  .vercelignore  LICENSE.md  README.md  the-constitutional-atlas.prd.md
app/: .env.local.example  middleware.ts  package-lock.json  package.json
app/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
app/components/: AtlasClient.tsx  AtlasPrimer.tsx  Canvas3D.tsx  ClusterReachPanel.tsx  ControlPanel.tsx  CountryBadge.tsx  DetailPanel.tsx  ExportModal.tsx  (+16 more)
openspec/: project.md
pipeline/: pyproject.toml  pyrightconfig.json
pipeline/config/: country_processing.toml
pipeline/scripts/: run_m1.py  run_m2.py  run_m3.py  run_m4.py  run_m4_5.py  run_m4_6.py  run_pipeline.py
pipeline/src/m1_scraper/: __init__.py  discovery.py  parser.py  scraper.py  url_builder.py
pipeline/src/m2_segmenter/: __init__.py  csv_writer.py  overrides.py  patterns.py  segmenter.py  validators.py
pipeline/src/m3_embedder/: __init__.py  batch_processor.py  cache.py  embedder.py  gemini_client.py
pipeline/src/m4_5_exporter/: __init__.py  json_writer.py  neon_ingest.py  validator.py
pipeline/src/m4_6_labeler/: __init__.py  gemini_text_client.py  labeler.py  prompt_builder.py
pipeline/src/m4_clusterer/: __init__.py  clusterer.py  country_clusters.py  hdbscan_runner.py  report_generator.py  umap_reducer.py
pipeline/src/shared/: constants.py  country_codes.py  models.py  processing_policy.py
pipeline/tests/: conftest.py  test_clusterer.py  test_embedder.py  test_exporter.py  test_labeler.py  test_processing_policy.py  test_scraper.py  test_segmenter.py
(+286 files in other folders)
